--- a/usercss/emranStyle.css
+++ b/usercss/emranStyle.css
@@ -106,3 +106,25 @@ nav2{
 .footerItems .footerLinks a{
     padding-bottom: 10px;
 }
+
+
+main #aboutUsP{
+    text-align: justify;
+        -moz-text-align-last: justify;
+        text-align-last:auto;
+}
+
+.map-container {
+    overflow: hidden;
+    padding-bottom: 5%;
+    position: relative;
+    height: 0;
+}
+
+.map-container iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
